# carCrashAvoidanceSystemSimulation

./: Authentication.cpp  Authentication.h  Authenticator.cpp  Authenticator.h  CMakeLists.txt  Controller.cpp  Controller.h  Model.cpp  Model.h  Permission.cpp  Permission.h  PermissionType.h  ProofOfID.cpp  ProofOfID.h  Resource.cpp  Resource.h  Role.cpp  Role.h  SensorData.cpp  SensorData.h  Subject.cpp  Subject.h  View.cpp  View.h  color.hpp  displayMenu.cpp  displayMenu.h  displaySensorData.cpp  displaySensorData.h  displayUserData.cpp  displayUserData.h  displayVehicleData.cpp  displayVehicleData.h  displayWarnings.cpp  displayWarnings.h  inputValidation.cpp  inputValidation.h  loggSensorData.cpp  loggSensorData.h  main.cpp  (+12 more)
carCrashAvoidanceSystemSimulation/: CMakeLists.txt  carCrashAvoidanceSystemSimulation.cpp  carCrashAvoidanceSystemSimulation.h
